Edit-profile page updates
Added some new features:
- Select country;
- Select profile privacy in a pretty manner;
- Debugging: Saving profile alterations
- Debugging: Map connection

--- a/Projeto/src/main/webapp/_pgbackup/css/style_1624633197.css
+++ b/Projeto/src/main/webapp/_pgbackup/css/style_1624633197.css
@@ -50,7 +50,7 @@ header {
     height: 100%;
     overflow: auto;
     padding: 5px;
-    box-sizing: border-box;
+    border-box: 100%;
 }
 
 .map-area {
