--- a/Projeto/src/main/webapp/_pgbackup/css/style_1624631237.css
+++ b/Projeto/src/main/webapp/_pgbackup/css/style_1624631237.css
@@ -2,6 +2,12 @@
     --background: rgba(85, 214, 170, .85);
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body,
 html {
     height: 100%;
@@ -36,6 +42,15 @@ header {
     height: 500px;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+}
+
 .app {
     display: flex;
     flex-direction: row;
@@ -50,7 +65,6 @@ header {
     height: 100%;
     overflow: auto;
     padding: 5px;
-    box-sizing: border-box;
 }
 
 .map-area {
