Added functionalities to load and upload user images

--- a/Projeto/src/main/webapp/css/style.css
+++ b/Projeto/src/main/webapp/css/style.css
@@ -190,3 +190,15 @@ div.createEvent label {
 div.createEvent label:after {
     content: ":";
 }
+
+#userImg {
+    
+}
+.imgUpload {
+
+}
+.imgUpload:hover {
+    cursor: pointer;
+}
+
+}
