--- a/Projeto/src/main/webapp/css/style.css
+++ b/Projeto/src/main/webapp/css/style.css
@@ -41,7 +41,7 @@ header {
 }
 
 .app {
-    display: flex;
+   display: flex;
     flex-direction: row;
     height: 100%;
 }
@@ -68,10 +68,16 @@ header {
     height: 100%;
 }
 
+#mapPreview {
+    height: 200px;
+    width: 200px;
+}
+
+
 /* Optional: Makes the sample page fill the window. */
 html,
 body {
-    height: 100%;
+    /*height: 100%;*/
     margin: 0;
     padding: 0;
 }
@@ -151,7 +157,7 @@ body {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-    height: 88%;
+    height: 83.35%;
     background-color: lightgray;
 }
 
