--- a/Projeto/src/main/webapp/css/style.css
+++ b/Projeto/src/main/webapp/css/style.css
@@ -52,7 +52,7 @@ header {
     min-width:200px;
 
     /* just one way to do it */
-    height: 100%;
+    height: 83.65vh;
     overflow: auto;
     padding: 5px;
     box-sizing: border-box;
@@ -65,7 +65,7 @@ header {
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
-    height: 100%;
+    height: 83.63vh;
 }
 
 #mapPreview {
@@ -157,7 +157,8 @@ body {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-    height: 83.35%;
+    height: auto;
+    min-height: 83.65%;
     background-color: lightgray;
 }
 
@@ -206,6 +207,27 @@ div.createEvent label:after {
 }
 .imgUpload:hover {
     cursor: pointer;
+}
+
+.createEventFormInput {
+    padding-left: 10px;
+    padding-right: 8px;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+    border-radius: 12px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.createEventFormInput::-webkit-input-placeholder {
+    text-align: center;
+}
+.createEventFormInput:focus {
+    
+    outline:none;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+    border-radius: 12px;
 }
 
 }
