Alteraçoes front-end
Ligaçoes entre users e eventos funcionais
Tabs funcionais com retrocesso
Mecanismos de moderator e owner

--- a/Projeto/src/main/webapp/css/style.css
+++ b/Projeto/src/main/webapp/css/style.css
@@ -241,4 +241,14 @@ div.createEvent label:after {
     border-radius: 12px;
 }
 
+.likeBtn {
+
+}
+.likeBtn:hover {
+    cursor: pointer;
+
+}
+
+.eventInfo {
+
 }
